# so that others can always use += for these variables
CLEANFILES =
TESTS =
XFAIL_TESTS =
EXTRA_DIST =

HAND_WRITTEN_TCASES = \
	tcases/int-max64p1-N5-parser.tcase \
	tcases/int-max2Mp1-N5-parser.tcase \
	tcases/int-none-N1-parser.tcase   \
	tcases/int-32-N5-trunc1-parser.tcase \
	tcases/int-159-N5-trunc1-parser.tcase \
	tcases/int-max63x7-N5-parser.tcase \
	tcases/hf-hpack-appx-c-2-1-packer.tcase \
	tcases/hf-hpack-appx-c-2-1-parser.tcase \
	tcases/hf-hpack-appx-c-2-2-packer.tcase \
	tcases/hf-hpack-appx-c-2-2-parser.tcase \
	tcases/hf-hpack-appx-c-2-3-packer.tcase \
	tcases/hf-hpack-appx-c-2-3-parser.tcase \
	tcases/hf-hpack-appx-c-2-4-packer.tcase \
	tcases/hf-hpack-appx-c-2-4-parser.tcase

HAND_WRITTEN_TIMAGES = \
	tcases/int-159.human \
	tcases/int-32.human \
	tcases/int-max2Mp1.human \
	tcases/int-max63x7-N5.wire \
	tcases/int-159-N5.wire \
	tcases/int-max2Mp1-N5.wire \
	tcases/int-max64p1.human \
	tcases/int-32-N5.wire \
	tcases/int-max63x7.human \
	tcases/int-max64p1-N5.wire \
	tcases/hf-method-get.human \
	tcases/hf-method-get-idx-static.wire \
	tcases/hf-password-secret.human \
	tcases/hf-password-secret-never-lit-lit.wire \
	tcases/hf-customk-customv.human \
	tcases/hf-customk-customv-with-lit-lit.wire \
	tcases/hf-path-sample.human \
	tcases/hf-path-sample-wout-static-lit.wire

TESTS += $(HAND_WRITTEN_TCASES)
EXTRA_DIST += $(HAND_WRITTEN_TCASES)
EXTRA_DIST += $(HAND_WRITTEN_TIMAGES)

# Mark already listed test cases that are expected to fail.
XFAIL_TESTS += \
	tcases/int-max64p1-N5-parser.tcase \
	tcases/int-max2Mp1-N5-parser.tcase \
	tcases/int-none-N1-parser.tcase   \
	tcases/int-32-N5-trunc1-parser.tcase \
	tcases/int-159-N5-trunc1-parser.tcase \
	tcases/int-max63x7-N5-parser.tcase

# XXX: These test cases should not fail, but they do because HeaderFieldPaxxer
# lacks support for packing non-indexed and never-indexed header fields.
XFAIL_TESTS += \
	tcases/hf-hpack-appx-c-2-3-packer.tcase \
	tcases/hf-hpack-appx-c-2-2-packer.tcase


CLEANFILES += *.tcase.tmp

TEST_EXTENSIONS = .tcase
TCASE_LOG_COMPILER = $(SHELL) $(top_srcdir)/tests/run-tcase.sh
AM_TCASE_LOG_FLAGS = $(top_builddir)/src/HttpPaxxer/

dist_check_SCRIPTS = \
	run-tcase.sh

# Not distributed; XXX: listing it here breaks bootstrap or "make distcheck".
# generate-tcases.pl

# add test cases and supplementary files generated by make-tcases.pl
include $(top_srcdir)/tests/tcases/generated.am
